[package]
name = "steamfetch"
version = "1.0.0"
edition = "2021"

[profile.release]
overflow-checks = true

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
edit-distance = "2.1.2"
image = "0.24"
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
viuer = "0.7.1"
